chore(pre-commit): commit stabilized pre-commit profile mutations (run 1)
Applies the tool-generated mutations from 'mvn verify -Ppre-commit' (license header year normalization to the toolchain's deterministic 2022 value, OpenRewrite formatting/modernization) minus the output of org.openrewrite.java.migrate.util.UseMapOf, which is excluded as defective: it drops required java.util.HashMap imports (3 compile failures), feeds null values into null-intolerant Map.of() (9 NPE test failures via ReportDataGenerator; TokenSheriffDevUIRuntimeService puts explicit nulls), and silently discards LinkedHashMap insertion ordering. Root cause fixed by overriding the pre-commit profile's activeRecipes in the root pom (JavaUtilAPIs removed); the 21 UseMapOf-mutated files were reverted to their pre-run state. Benchmarking module tests verified green.

Co-Authored-By: Claude <noreply@anthropic.com>